# g-whisper

./: .gitignore  README.md  config.yaml  g-whisper-debug.bat  g-whisper.bat  pyproject.toml  run.py
assets/stitch/html/: overlay-states.html
gwhisper/: app.py  audio.py  config.py  hotkeys.py  icon_art.py  notify.py  output.py  overlay.py  single_instance.py  startup.py  transcriber.py  tray.py  vad.py
